force-app/main/default/objects/Log_Index__c/Log_Index__c.object-meta.xml
<CustomObject>
    <label>Log Index</label>
    <pluralLabel>Log Indexes</pluralLabel>
    <nameField>
        <label>Log Index Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>