force-app/main/default/objects/Log_Index__c/fields/ApexLogId__c.field-meta.xml
<CustomField>
    <fullName>ApexLogId__c</fullName>
    <externalId>true</externalId>
    <label>Apex Log Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>