force-app/main/default/objects/Log_Index__c/fields/DmlSummaryJson__c.field-meta.xml
<CustomField>
    <fullName>DmlSummaryJson__c</fullName>
    <label>DML Summary JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>