force-app/main/default/objects/Log_Index__c/fields/HasBusinessDml__c.field-meta.xml
<CustomField>
    <fullName>HasBusinessDml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Business DML</label>
    <type>Checkbox</type>
</CustomField>