force-app/main/default/objects/Log_Index__c/fields/HasDml__c.field-meta.xml
<CustomField>
    <fullName>HasDml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has DML</label>
    <type>Checkbox</type>
</CustomField>