force-app/main/default/objects/Log_Index__c/fields/LastIndexedDate__c.field-meta.xml
<CustomField>
    <fullName>LastIndexedDate__c</fullName>
    <label>Last Indexed Date</label>
    <type>DateTime</type>
</CustomField>