force-app/main/default/objects/Log_Index__c/fields/LogLength__c.field-meta.xml
<CustomField>
    <fullName>LogLength__c</fullName>
    <label>Log Length</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>