force-app/main/default/objects/Log_Index__c/fields/LogStartTime__c.field-meta.xml
<CustomField>
    <fullName>LogStartTime__c</fullName>
    <label>Log Start Time</label>
    <type>DateTime</type>
</CustomField>