force-app/main/default/objects/Log_Index__c/fields/LogUserId__c.field-meta.xml
<CustomField>
    <fullName>LogUserId__c</fullName>
    <label>Log User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>