force-app/main/default/objects/Log_Index__c/fields/ScanStartedAt__c.field-meta.xml
<CustomField>
    <fullName>ScanStartedAt__c</fullName>
    <label>Scan Started At</label>
    <type>DateTime</type>
</CustomField>